# binary-tree

./: .gitignore  CMakeLists.txt  compile.sh  main.cpp
Tree/: binary_tree.h  binary_tree.ipp  node.h  node.ipp
tests/: README.md  btree_fixture.h  clear.cpp  get_depth.cpp  get_height.cpp  get_max.cpp  get_max_depth.cpp  get_min.cpp  get_min_depth.cpp  insert.cpp  is_balanced.cpp  look_up.cpp  print_inorder.cpp  print_postorder.cpp  print_preorder.cpp  remove.cpp  tests.cpp
